--- a/oauth-okta-starter/src/main/resources/application.yml
+++ b/oauth-okta-starter/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 okta:
   oauth2:
-    issuer: https://dev-533919.oktapreview.com/oauth2/default
-    client-id: 0oak8fz26cLefbPGC0h7
-    client-secret: xfPqP8G2dal39dcHr13IceUV3H44Y-eui1ymME_j
+    issuer: https://dev-702677.okta.com/oauth2/default
+    client-id: 0oa5hcq09ATvur0Jd4x6
+    client-secret: p1uOXMPbUt_5Ol0s919Tjwnl6CTvoDswqG3zv--y
 spring:
   thymeleaf:
     cache: false
