--- a/oauth-start/src/main/resources/application.yml
+++ b/oauth-start/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
       client:
         registration:
           github:
-            client-id: << your secret >>
-            client-secret: << your id >>
+            client-id: b4339eb1d2d6d915f336
+            client-secret: 02c7736a93987319e285c79b5a7b8d07269557b1
